Make Java 25 a prerequisite